feat(2.3.0-rc.1): Parameter & return type modifications